axion-ingestion/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-deployment
  namespace: axion-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ingestion-deployment

  template:
    metadata:
      labels:
        app: ingestion-deployment

    spec:
      containers:
        - name: ingestion-deployment
          image: bhawanidocker/axion-ingestion:1.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
