axion-ingestion/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
  namespace: axion-app
spec:
  selector:
    app: ingestion-deployment
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
